--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="leftH">
         <img src="./" alt="logo" />
-        <p></p>
+        <p>price compare</p>
       </div>
       <div class="rightH">
         <p></p>
