finish header ( finish?)

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <header>
       <div class="leftH">
         <img src="./" alt="logo" />
-        <p>price compare</p>
+        <p>قیمت باما</p>
       </div>
       <div class="rightH">
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <button class="ChCh"><img src="./media/svgviewer-output (1).svg" alt="">جستجو</button>
+        <button class="ChCh"><img src="./media/Fishing net.svg" alt="">شکارچی قیمت</button>
+        <button class="ChCh"><img src="./media/camera-front-svgrepo-com.svg" alt="">جستجو با عکس</button>
+        <button class="ChCh"><img src="./media/dashboard-76.svg" alt="">داشبورد</button>
       </div>
     </header>
 
@@ -105,5 +105,8 @@
     </div>
  -->
 
+
+
+ //<script src="./button.js"></script>
   </body>
 </html>
